Creando directorio DATOS

--- a/DATOS/formulario.html
+++ b/DATOS/formulario.html
@@ -4,6 +4,10 @@
 			<h1>Participantes del Curso Git</h1>
 		</div>
 		<div>
+			<label>Teléfono</label>
+			<input type="text" name="telefono">
+		</div>
+		<div>
 			<label>Participante</label>
 			<input type="text" name="nombre">
 			<input type="submit" name="Envia"  
